--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="form-group">
                         <label for="firstTrain">First Train Time (HH:mm - military time)</label>
-                        <input type="text" class="form-control" id="trainTimeInput">
+                        <input type="text" class="form-control" id="first-train-input">
                     </div>
                     <div class="form-group">
                         <label for="frequency">Frequency (min)</label>
