--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-
         <link rel="stylesheet" href="assets/css/style.css">
-        <title>Train Scheduler</title>
+        <title>Atlanta Transit System</title>
     </head>
         <body>
+        <!-- Nav -->
         <nav class="navbar navbar-dark bg-info" id="nav-header">
             <div class="navbar-header">
                 <button type="button" class="btn btn-default btn-md">
@@ -17,6 +17,7 @@
                 </button>
             </div>
         </nav> <!-- /nav-bar -->
+        <!-- Container -->
         <div class="container">
             <div class="jumbotron">
                 <div class="jumbotron-header">
@@ -49,6 +50,7 @@
                 <h3 class="card-title">Add Train</h3>
             </div>
             <div class="card-body text-dark bg-light">
+                <!-- Form -->
                 <form>
                     <div class="form-group">
                         <label for="train-name-input">Train Name</label>
@@ -67,9 +69,9 @@
                         <input type="text" class="form-control" id="frequency-input">
                     </div>
                     <button type="submit" class="btn btn-primary bg-info" id="add-train-btn" data-toggle="modal" data-target="#submit-modal">Submit</button>
-                    <span id="required-fields">*ALL fields are required to add a train to the schedule.</span>
-                    <span id="not-military-time">*First train time must be in military time.</span>
-                    <span id="nan-frequency">*Frequency is not a number. Please enter a number in minutes.</span>                
+                    <span id="required-fields"></span>
+                    <span id="not-military-time"></span>
+                    <span id="nan-frequency"></span>                
                     <!-- Modal -->
                     <div class="modal fade" id="submit-modal" tabindex="-1" role="dialog">
                         <div class="modal-dialog" role="document">
