--- a/index.html
+++ b/index.html
@@ -4,21 +4,19 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/css/style.css">
         <title>Atlanta Transit System</title>
     </head>
         <body>
         <!-- Nav -->
         <nav class="navbar navbar-dark bg-info justify-content-between" id="nav-header">
-            <button type="button" class="btn btn-default btn-md">ATS</button>
+            <button type="button" class="btn btn-default btn-md"><i class='fa fa-subway' aria-hidden='true'></i>ATS</button>
             <form class="form-inline">
-                <input class="form-control mr-sm-2" type="text" id="user-email" placeholder="User Email">
-                <input class="form-control mr-sm-2" type="password" id="password" placeholder="Password">
                 <button class="btn btn-primary my-2 my-sm-0" type="submit" id="btn-login">Login</button>
                 <button class="btn btn-primary my-2 my-sm-0" type="submit" id="btn-sign-up">Sign Up</button>
                 <span id="current-user"></span>
-                <button class="btn btn-primary my-2 my-sm-0" type="submit" id="btn-log-out">Log out</button>
+                <button class="btn btn-primary my-2 my-sm-0" type="submit" id="btn-log-out">Log out<i class="fa fa-sign-out-alt"></i></button></button>
             </form> 
         </nav> <!-- /nav-bar -->
         <!-- Container -->
