cleaned up some html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <tbody id="train-table"></tbody>
                 </table>
             </div>
-        </div> <!-- /card-->
+        </div> 
         <div class="card text-white bg-info mb-3" id="add-train-card">
             <div class="card-header">
                 <h3 class="card-title">Add Train</h3>
@@ -89,11 +89,11 @@
                                 </div>
                             </div>
                         </div>
-                    </div> <!-- /modal -->
+                    </div> 
                 </form>
             </div>
         </div>
-        </div> <!-- /container -->
+        </div> 
         <footer>
             <div>Copyright &copy; 2018 Kevin Luu </div> 
         </footer>
